<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/background"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="@color/color_orange"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="142dp" />


            <android.support.constraint.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="rdev.findit.lostActivity"
                android:focusable="true"
                android:focusableInTouchMode="true"

                >





                <TextView
                    android:id="@+id/textView_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/roboto_light"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_Title"
                    android:layout_marginLeft="16dp"/>

                <EditText
                    android:id="@+id/editText_Name"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:inputType="text"
                    android:nextFocusLeft="@id/editText_Name"
                    android:nextFocusUp="@id/editText_Name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_text"
                    android:layout_marginLeft="16dp"/>


                <TextView
                    android:id="@+id/textView_Country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/country"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_Name"
                    android:layout_marginLeft="16dp"/>

                <Spinner

                    android:id="@+id/spinner_country"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_Country"
                    android:layout_marginLeft="16dp"
                    android:spinnerMode="dropdown">

                </Spinner>

                <TextView
                    android:id="@+id/textView_City"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_country"
                    android:layout_marginLeft="16dp"/>

                <Spinner
                    android:id="@+id/spinner_city"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_City"
                    android:layout_marginLeft="16dp"/>


                <TextView
                    android:id="@+id/textView_Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_city"
                    android:layout_marginLeft="16dp"/>

                <EditText
                    android:id="@+id/editText_Description"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_Description"
                    android:layout_marginLeft="16dp"
                    android:inputType="text"
                    android:nextFocusUp="@id/editText_Description"
                    android:nextFocusLeft="@id/editText_Description"
                    />

                <TextView
                    android:id="@+id/textView_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/contact"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_Description"
                    android:layout_marginLeft="16dp"/>

                <EditText
                    android:id="@+id/editText_Contact"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_contact"
                    android:layout_marginLeft="16dp"
                    android:nextFocusUp="@id/editText_Contact"
                    android:nextFocusLeft="@id/editText_Contact"/>

                <Button
                    android:id="@+id/button_Send"
                    android:layout_width="171dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_select_image"
                    android:background="@drawable/btn_send"/>

                <TextView
                    android:id="@+id/button_select_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:clickable="true"
                    android:text="@string/photo"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/color_white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_Contact"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textAlignment="center"
                    android:gravity="center"/>






            </android.support.constraint.ConstraintLayout>


        </FrameLayout>
    
    </ScrollView>

